k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
        environment: production
        project: practice4-kubernetes
    spec:
      containers:
        - name: client
          image: duong1200798/multi-client # port expose 3005
          ports:
            - containerPort: 3005 # port need match with port expose by image
